footer 及び CTA 完成

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -20,4 +20,5 @@
   <!-- /c-designCard__inner -->
 </div>
 <%- include('partials/projectCategories', { categories: categories }) %> <%-
-include('partials/cards', { cards: cards }) %> <%- include('partials/footer') %>
+include('partials/cards', { cards: cards }) %> <%-
+include('partials/footer',{noCta:true}) %>
