--- a/src/sass/component/_c-heading.scss
+++ b/src/sass/component/_c-heading.scss
@@ -32,6 +32,17 @@
   letter-spacing: 2px;
 }
 
+.c-heading5 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 36px; /* 112.5% */
+
+  @include global.mq(md) {
+    font-size: 40px;
+    line-height: 40px; /* 100% */
+  }
+}
+
 .c-heading2.--spSm {
   color: var(--white);
   font-size: 28px;
@@ -46,5 +57,17 @@
     font-weight: 500;
     line-height: 1.2; /* 120% */
     letter-spacing: 2px;
+  }
+}
+
+.c-textSpSm {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px; /* 166.667% */
+
+  @include global.mq(md) {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
   }
 }
