--- a/src/sass/layout/_l-inner.scss
+++ b/src/sass/layout/_l-inner.scss
@@ -4,12 +4,13 @@
   padding-inline: 24px;
 
   @include global.mq(md) {
-    padding-inline: 40px;
-    max-width: 768px; //688+40*2
+    padding-inline: 39px;
+    max-width: 768px; //690+39*2
     margin-inline: auto;
   }
 
   @include global.mq(lg) {
     max-width: 1192px; //1112+40*2
+    margin-inline: auto;
   }
 }
