--- a/src/sass/project/_p-nav.scss
+++ b/src/sass/project/_p-nav.scss
@@ -1,7 +1,6 @@
 @use "../global" as global;
 
-.p-headerNav {
-  color: var(--white);
+.p-nav.--header {
   background-color: var(--black);
   padding: 48px 24px;
   width: 100vw;
@@ -24,9 +23,10 @@
   }
 
   ul {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 32px;
+    align-items: flex-start;
 
     @include global.mq(md) {
       flex-direction: row;
@@ -46,5 +46,27 @@
       line-height: 14px; /* 100% */
       letter-spacing: 2px;
     }
+  }
+}
+
+.p-nav {
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    align-items: center;
+
+    @include global.mq(md) {
+      flex-direction: row;
+      gap: 42px;
+    }
+  }
+
+  a {
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px; /* 100% */
+    letter-spacing: 2px;
   }
 }
