--- a/src/ejs/partials/footer.ejs
+++ b/src/ejs/partials/footer.ejs
@@ -1,5 +1,5 @@
  <% var noCta = typeof noCta !== 'undefined' ? noCta : false; %>
-
+</main>
 <footer class="l-footer <%= noCta ? '--noCta' : '' %>">
   <div class="l-inner">
 
@@ -32,7 +32,7 @@
         <ul >
           <% if(SNSicons) { SNSicons.forEach(item => {%>
           <li >
-            <a href="<%= item.url %>"><img src="<%= item.icon %>" alt=""></a>
+            <a href="<%= item.url %>"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><%- item.icon %></svg></a>
           </li>
           <%}) }%>
         </ul>
