works.ejs完成。1つのworks.ejsからカテゴリごとのworks-〇〇.htmlを出しわけるところから見た目まで。

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -14,7 +14,7 @@
       <a href="./about.html" class="c-buttonPrimary"><span>Learn More</span></a>
     </div>
   </div>
-  <%- include('partials/projectCategories', { categories: categories }) %> <%-
-  include('partials/cards', {noBtn:true}) %>
+  <%- include('partials/projectCategories', { categories: categories ,
+  page:"top"}) %> <%- include('partials/cards', {noBtn:true}) %>
 </div>
 <%- include('partials/footer') %>
