--- a/src/ejs/partials/header.ejs
+++ b/src/ejs/partials/header.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body class="">
+  <body>
     <% var page = typeof page !== 'undefined' ? page : false; %>
     <% var bg = typeof bg !== 'undefined' ? bg : false; %>
 
