aboutページ完成

--- a/src/ejs/about.ejs
+++ b/src/ejs/about.ejs
@@ -1,16 +1,93 @@
-<div class="c-card">
-  <figure class="c-card__img">
-    <img src="./assets/img/location1-min.png" alt="" />
-  </figure>
-  <div class="c-card__body">
-    <h2 class="c-card__city c-heading3">CANADA</h2>
-    <p class="c-card__text">
-      Each project starts with an in-depth brand research to ensure we only
-      create products that serve a purpose. We merge art, design, and technology
-      into exciting new solutions.
-    </p>
-    <a href="" class="c-buttonPrimary --rev"><span>SEE LOCATION</span></a>
-  </div>
-  <!-- /c-card__body -->
+<%- include('partials/header',{ page: "about", bg:"c-bg1"}) %>
+<div class="l-inner">
+  <section class="p-aboutTop">
+    <figure class="p-aboutTop__img">
+      <picture>
+        <source
+          srcset="assets/img/img_about-pc-min.png"
+          media="(min-width: 1112px)"
+        />
+        <source
+          srcset="assets/img/img_about-tb-min.png"
+          media="(min-width: 768px)"
+        />
+        <img src="assets/img/img_about-sp-min.png" alt="" />
+      </picture>
+    </figure>
+    <div class="p-aboutTop__body">
+      <h1 class="c-heading1">About Us</h1>
+      <p class="c-textSpSm">
+        Founded in 2010, we are a creative agency that produces lasting results
+        for our clients. We’ve partnered with many startups, corporations, and
+        nonprofits alike to craft designs that make real impact. We’re always
+        looking forward to creating brands, products, and digital experiences
+        that connect with our clients’ audiences.
+      </p>
+    </div>
+    <!-- /p-aboutTop__body -->
+  </section>
+  <section class="p-feature">
+    <figure class="p-feature__img">
+      <picture>
+        <source
+          srcset="assets/img/img_about2-pc-min.png"
+          media="(min-width: 1112px)"
+        />
+        <source
+          srcset="assets/img/img_about2-tb-min.png"
+          media="(min-width: 768px)"
+        />
+        <img src="assets/img/img_about2-sp-min.png" alt="" />
+      </picture>
+    </figure>
+    <div class="p-feature__body">
+      <h2 class="c-heading5 u-textPeach">World-class talent</h2>
+      <p class="c-textSpSm">
+        We are a crew of strategists, problem-solvers, and technologists. Every
+        design is thoughtfully crafted from concept to launch, ensuring success
+        in its given market. We are constantly updating our skills in a myriad
+        of platforms.
+      </p>
+      <p>
+        Our team is multi-disciplinary and we are not merely interested in form
+        — content and meaning are just as important. We give great importance to
+        craftsmanship, service, and prompt delivery. Clients have always been
+        impressed with our high-quality outcomes that encapsulates their brand’s
+        story and mission.
+      </p>
+    </div>
+  </section>
+  <%- include('partials/cards') %>
+  <section class="p-feature u-flexRowRev">
+    <figure class="p-feature__img">
+      <picture>
+        <source
+          srcset="assets/img/img_about3-pc-min.png"
+          media="(min-width: 1112px)"
+        />
+        <source
+          srcset="assets/img/img_about3-tb-min.png"
+          media="(min-width: 768px)"
+        />
+        <img src="assets/img/img_about3-sp-min.png" alt="" />
+      </picture>
+    </figure>
+    <div class="p-feature__body">
+      <h2 class="c-heading5 u-textPeach">The real deal</h2>
+      <p class="c-textSpSm">
+        As strategic partners in our clients’ businesses, we are ready to take
+        on any challenge as our own. Solving real problems require empathy and
+        collaboration, and we strive to bring a fresh perspective to every
+        opportunity. We make design and technology more accessible and give you
+        tools to measure success.
+      </p>
+      <p>
+        We are visual storytellers in appealing and captivating ways. By
+        combining business and marketing strategies, we inspire audiences to
+        take action and drive real results.
+      </p>
+    </div>
+  </section>
 </div>
-<!-- /c-card -->
+
+<%- include('partials/footer') %>
