--- a/src/sass/component/_c-bg1.scss
+++ b/src/sass/component/_c-bg1.scss
@@ -8,7 +8,7 @@
     background: url(../../assets/img/img_bg.svg) no-repeat;
 
     background-size: min(1006px, 100%) 594px;
-    width: 100vw;
+    width: 100%;
     height: 594px;
     max-width: 1006px;
     position: absolute;
