locationsページ完成

--- a/src/ejs/about.ejs
+++ b/src/ejs/about.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header',{ page: "about", bg:"c-bg1"}) %>
-<div class="l-inner">
+<div class="l-inner --spFullWidth">
   <section class="p-aboutTop">
     <figure class="p-aboutTop__img">
       <picture>
