--- a/src/sass/layout/_l-inner.scss
+++ b/src/sass/layout/_l-inner.scss
@@ -14,3 +14,17 @@
     margin-inline: auto;
   }
 }
+
+.l-inner.--spFullWidth {
+  padding: 0;
+  @include global.mq(md) {
+    padding-inline: 39px;
+    max-width: 768px; //690+39*2
+    margin-inline: auto;
+  }
+
+  @include global.mq(lg) {
+    max-width: 1192px; //1112+40*2
+    margin-inline: auto;
+  }
+}
