--- a/src/ejs/partials/cta.ejs
+++ b/src/ejs/partials/cta.ejs
@@ -8,5 +8,5 @@
       expertise can help your business grow.
     </p>
   </div>
-  <a class="c-buttonPrimary" href=""><span>Get in touch</span></a>
+  <a class="c-buttonPrimary" href="./contact.html"><span>Get in touch</span></a>
 </div>
