--- a/src/ejs/partials/location.ejs
+++ b/src/ejs/partials/location.ejs
@@ -1,4 +1,4 @@
-<div class="p-locationCard">
+<div class="p-locationCard" id="<%= location.pay %>">
   <div class="p-locationCard__iframe"><%- location.iframe %></div>
   <div class="p-locationCard__body">
     <h2 class="p-locationCard__pay c-heading5 u-textPeach">
