--- a/src/sass/layout/_l-contents.scss
+++ b/src/sass/layout/_l-contents.scss
@@ -49,6 +49,7 @@
       .p-projectCategories__item {
         &:first-child {
           grid-row: 1/3;
+          height: auto;
         }
       }
     }
@@ -61,12 +62,6 @@
     gap: 80px;
     width: 100%;
 
-    &::before {
-      bottom: -306px;
-      right: calc(50% - min(720px, 50vw));
-      left: unset;
-    }
-
     @include global.mq(md) {
       gap: 32px;
     }
@@ -74,6 +69,12 @@
     @include global.mq(lg) {
       flex-direction: row;
     }
+  }
+
+  + .l-footer::before {
+    top: -678px;
+    right: calc(50% - min(720px, 50vw));
+    left: unset;
   }
 }
 
@@ -101,19 +102,7 @@
     transform: rotate(0);
     top: 320px;
   }
-  .l-inner {
-    // padding: 0;
-    // @include global.mq(md) {
-    //   padding-inline: 39px;
-    //   max-width: 768px; //690+39*2
-    //   margin-inline: auto;
-    // }
 
-    // @include global.mq(lg) {
-    //   max-width: 1192px; //1112+40*2
-    //   margin-inline: auto;
-    // }
-  }
   .p-cards {
     padding-block: 120px;
     align-items: center;
@@ -147,5 +136,31 @@
         left: 0;
       }
     }
+  }
+}
+
+.l-contents.--contact {
+  .p-cards {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+
+    @include global.mq(md) {
+    }
+
+    @include global.mq(lg) {
+      flex-direction: row;
+    }
+  }
+  .c-card {
+    max-width: 350px;
+  }
+
+  + .l-footer::before {
+    top: -434px;
+    right: calc(50vw - min(720px, 50%));
+    left: unset;
+    transform: rotate(0);
   }
 }
