graphicのbackground-sizeを修正(角丸がおかしかった)

--- a/src/sass/project/_p-projectCategories.scss
+++ b/src/sass/project/_p-projectCategories.scss
@@ -63,7 +63,7 @@
   }
   &.graphic {
     background: url(../../assets/img/img_category3_sp-min.png) no-repeat center
-      center / cover;
+      center / contain;
     @include global.mq(md) {
       background-image: url(../../assets/img/img_category3_tb-min.png);
     }
