--- a/src/ejs/partials/header.ejs
+++ b/src/ejs/partials/header.ejs
@@ -28,9 +28,9 @@
     <header class="l-header">
       <div class="l-header__container l-inner">
         <% if(page === 'top') {%>
-        <h1 class="c-logo"><a href="/">DESIGNO</a></h1>
+        <h1 class="c-logo"><a href="index.html">DESIGNO</a></h1>
         <% } else {%>
-        <div class="c-logo"><a href="/">DESIGNO</a></div>
+        <div class="c-logo"><a href="index.html">DESIGNO</a></div>
         <% } %>
         <nav class="p-nav --header l-header__nav" id="js-headerNav">
           <ul class="p-nav__list">
