画像パス再修正　ヘッダータイトル修正

--- a/src/ejs/partials/header.ejs
+++ b/src/ejs/partials/header.ejs
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>DESIGNO</title>
     <% if(page === 'contact'){ %>
       <script type="text/javascript">
         let submitted = false;
