--- a/src/sass/project/_p-nav.scss
+++ b/src/sass/project/_p-nav.scss
@@ -68,6 +68,8 @@
     font-weight: 400;
     line-height: 14px; /* 100% */
     letter-spacing: 2px;
+    border-bottom: 1px solid transparent;
+    transition: border 0.3s;
 
     &:hover,
     &:focus-visible {
